[package]
name = "consequences"
version = "0.1.0"
authors = ["Connor Wilkes <clw762@student.bham.ac.uk>"]
edition = "2018"

[dependencies]
actix-web = "1.0.0-beta.5"
diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
r2d2 = "0.8.4"
dotenv = "0.9.0"
env_logger = "0.6"
futures = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
actix-session = "0.1.0-alpha.4"
redis = "0.9.0"
r2d2_redis = "0.9.0"
